// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`css template generates dark colors 1`] = `
Array [
  Array [
    "colors.css",
    ":root {
  --rnpc_stringColor: #ffffff;
  --rnpc_alphaColor: #ff000080;
}

@media (prefers-color-scheme: dark) {
  :root {
    --rnpc_stringColor: #000000;
    --rnpc_alphaColor: #ffc8c880;
  }
}",
  ],
]
`;

exports[`css template generates high contrast colors 1`] = `
Array [
  Array [
    "colors.css",
    ":root {
  --rnpc_stringColor: #cccccc;
}

@media (prefers-contrast: high) {
  :root {
    --rnpc_stringColor: #ffffff99;
  }
}

@media (prefers-color-scheme: dark) {
  :root {
    --rnpc_stringColor: #33333399;
  }
}

@media (prefers-contrast: high) and (prefers-color-scheme: dark) {
  :root {
    --rnpc_stringColor: #000000;
  }
}",
  ],
]
`;

exports[`css template generates light colors 1`] = `
Array [
  Array [
    "colors.css",
    ":root {
  --rnpc_stringColor: #ffffff;
  --rnpc_alphaColor: #ff000080;
  --rnpc_namedColor: #0000ff;
}",
  ],
]
`;
